fixed wyk 2020-03-25 in wtg

--- a/electives/wtg/wyk/2020-03-25/2020-03-25.md
+++ b/electives/wtg/wyk/2020-03-25/2020-03-25.md
@@ -82,7 +82,7 @@ $\mathrm{ecc}(v) = \max\big\{d(v,y):~y \in V(G)\big\}$
 
 $\min\big\{\mathrm{ecc}(x):~x \in V(G)\big\}$
 
-### Średnia grafu
+### Średnica grafu
 
 $\max\big\{d(x,y):~x,y \in V(G)\big\}$
 
