fixed mandatory exercises batch #4 in aisd

--- a/4th-semester/aisd/cw/mandatory-exercises/2020-05-12/l6z1/l6z1.tex
+++ b/4th-semester/aisd/cw/mandatory-exercises/2020-05-12/l6z1/l6z1.tex
@@ -94,7 +94,7 @@ Złożoność obliczeniowa powyższego algorytmu wynosi $O(|V| + |E|)$. Algorytm
 
 Zdefiniujmy funkcję zwracającą nam indeksy wszystkich wierzchołków sąsiednich dla danego $v_k \in V$:
 $$
-\mathcal{N}(k) = \{j: \forall(v_k,v_j) \in E\}.
+\mathcal{N}(k) = \{j: \forall(v_j,v_k) \in E\}.
 $$
 
 Nasze poszukiwania zaczynamy od inicjalizacji tablicy odległości pomiędzy wszystkimi wierzchołkami $V$ a wierzchołkiem $v_s$.
