applied small fixes to some wtg documents

--- a/electives/wtg/wyk/2020-02-26/2020-02-26.md
+++ b/electives/wtg/wyk/2020-02-26/2020-02-26.md
@@ -24,10 +24,10 @@
 $V = \{ v_1, v_2, v_3, v_4 \}$\
 $E = \{ e_1, ..., e_5 \}$
 
-$\phi(e_1) = \{ v_1, v_2 \}$
-$\phi(e_2) = \{ v_1, v_2 \}$
-$\phi(e_3) = \{ v_1, v_3 \}$
-$\phi(e_4) = \{ v_3, v_4 \}$
+$\phi(e_1) = \{ v_1, v_2 \}$\
+$\phi(e_2) = \{ v_1, v_2 \}$\
+$\phi(e_3) = \{ v_1, v_3 \}$\
+$\phi(e_4) = \{ v_3, v_4 \}$\
 $\phi(e_5) = \{ v_4 \}$
 
 ## $Definicja$ graf prosty
@@ -89,10 +89,10 @@ $$
 \sum_{v \in V}\deg(v) = \sum_{v \in V}(2\sum_{e \in L}||\phi(e) = \{v\}|| + \sum_{e \in D}||v \in \phi(e)||) =
 $$
 $$
-2\sum_{v \in V}\sum||\phi(e) = \{v\}|| + \sum_{v \in V}\sum_{e \in D}||v \in \phi(e)|| =
+2\sum_{v \in V}\sum_{e\in L}||\phi(e) = \{v\}|| + \sum_{v \in V}\sum_{e \in D}||v \in \phi(e)|| =
 $$
 $$
-2\sum_{e \in L}\sum_{v \in V}||\phi(e) = \{v\}|| + \sum_{e \in D}\sum_{v \in V}||v \in \phi(e) =
+2\sum_{e \in L}\sum_{v \in V}||\phi(e) = \{v\}|| + \sum_{e \in D}\sum_{v \in V}||v \in \phi(e)|| =
 $$
 $$
 2\sum_{e \in L}1 + \sum_{e \in D}2 = 2|L| + 2|D| = 2(|L| + |D|) = 2|E|
@@ -169,13 +169,13 @@ wówczas $\sum_{\{x,y\} \in E}(\deg(x) + \deg(y)) = \sum_{x \in V}\deg^2(x)$
 ### Dowód
 
 $$
-\sum_{\{x,y\} \in E}( \deg(x) + \deg(y) ) = \frac{1}{2}\sum_{\{x,y\} \in V}\Big\lVert\{x,y\} \in E\Big\rVert\Big( \deg(x) + \deg(y) \Big)=
+\sum_{\{x,y\} \in E}( \deg(x) + \deg(y) ) = \frac{1}{2}\sum_{\{x,y\} \in V} \llbracket\{x,y\} \in E\rrbracket\Big( \deg(x) + \deg(y) \Big)=
 $$
 $$
-= \frac{1}{2}\bigg( \sum_{x \in V} \sum_{y \in V}\Big( \big\lVert \{x,y\} \in E\big\rVert \deg(x) ) + \sum_{x \in V} \sum_{y \in V} \Big( \big\lVert \{x,y\} \in E \big\rVert \deg(y) \Big) \bigg) =
+= \frac{1}{2}\bigg( \sum_{x \in V} \sum_{y \in V}\Big( \llbracket \{x,y\} \in E\rrbracket \deg(x) ) + \sum_{x \in V} \sum_{y \in V} \Big( \llbracket \{x,y\} \in E \rrbracket \deg(y) \Big) \bigg) =
 $$
 $$
-= \frac{1}{2}\bigg( \sum_x\deg(x)\Big( \sum_y \big\lVert\{x,y\} \in E\big\rVert \Big) + \sum_y\deg(y) \Big( \sum_x\big\lVert\{x,y\} \in E\big\rVert \Big) \bigg) =
+= \frac{1}{2}\bigg( \sum_x\deg(x)\Big( \sum_y \llbracket\{x,y\} \in E\rrbracket \Big) + \sum_y\deg(y) \Big( \sum_x\llbracket\{x,y\} \in E\rrbracket \Big) \bigg) =
 $$
 $$
 = \frac{1}{2}\bigg( \sum_x\deg^2(x) + \sum_y\deg^2(y) \bigg)
@@ -226,10 +226,10 @@ Ciąg $(d_1...d_n)$ jest graficzny, jeśli istnieje graf prosty $(V,E)$ o tym rz
 
 Ciąg $g = (g_1...g_n)$ jest graficzny $\iff$ gdy ciąg $(g_2'...g_n')$ jest graficzny, gdzie
 $$
-d_i =
+g_i =
 \begin{cases}
-  d_i - 1: i = 2...d_1+1\\
-  d_i: i = d_1 + 2,...n
+  g_i - 1: i = 2...g_1+1\\
+  g_i: i = g_1 + 2,...n
 \end{cases}
 $$
 
