fixed exercises in mandatory exercises batch #6 in aisd
Clarified some things that were left ambigious. Applied some small fixes.

--- a/4th-semester/aisd/cw/mandatory-exercises/2020-06-05/l8z5/l8z5.tex
+++ b/4th-semester/aisd/cw/mandatory-exercises/2020-06-05/l8z5/l8z5.tex
@@ -56,4 +56,6 @@ Dla każdej krawędzi $\hat{e}$ ze zbioru $A = \{ \hat{e}\in E: \mathrm{fst}(\ha
 
 Możemy myśleć o liczbie $t$ jako dodatkowym „koszcie wyjazdu” z wierzchołka $s$.
 
+Jako, że algorytm Dijkstry działa na każdym grafie o krawędziach z wagami dodatnimi to zadziała też w naszym grafie.
+
 \end{document}
