added a few new sections to the assignment paper in amh

--- a/electives/amh/wyk/referat/bib.bib
+++ b/electives/amh/wyk/referat/bib.bib
@@ -15,4 +15,9 @@
     DOI       = "10.1007/BF02023076"
 }
 
-
+@book{brandimarte,
+  author         = {Paolo Brandimarte},
+  title          = {Routing and scheduling in a flexible job shop by tabu search},
+  year           = {1993},
+  DOI            = {10.5555/160231.160247},
+}
