added a few new sections to the assignment paper in amh

--- a/electives/amh/wyk/referat/bib.bib
+++ b/electives/amh/wyk/referat/bib.bib
@@ -1,18 +1,18 @@
 
 @book{graham,
-    author    = "R.L.Graham and E.L.Lawler and J.K. Lenstra and A.H.G. Rinnooy Kan",
-    title     = "Optimization and Approximation in Deterministic Sequencing and Scheduling: a Survey",
-    year      = "1979",
-    publisher = "Elsevier B.V.",
-    DOI       = "10.1016/S0167-5060(08)70356-X"
+  author    = "R.L.Graham and E.L.Lawler and J.K. Lenstra and A.H.G. Rinnooy Kan",
+  title     = "Optimization and Approximation in Deterministic Sequencing and Scheduling: a Survey",
+  year      = "1979",
+  publisher = "Elsevier B.V.",
+  DOI       = "10.1016/S0167-5060(08)70356-X"
 }
 
 @book{amico-trubian,
-    author    = "Mauro Dell'Amico and Marco Trubian",
-    title     = "Applying tabu search to the job-shop scheduling problem",
-    year      = "1993",
-    address   = "Politecnico di Milano, 1-20133 Milano, Italy",
-    DOI       = "10.1007/BF02023076"
+  author    = "Mauro Dell'Amico and Marco Trubian",
+  title     = "Applying tabu search to the job-shop scheduling problem",
+  year      = "1993",
+  address   = "Politecnico di Milano, 1-20133 Milano, Italy",
+  DOI       = "10.1007/BF02023076"
 }
 
 @book{brandimarte,
@@ -20,4 +20,31 @@
   title          = {Routing and scheduling in a flexible job shop by tabu search},
   year           = {1993},
   DOI            = {10.5555/160231.160247},
+}
+
+@book{laarhoven,
+  author         = {Peter J. M. van Laarhoven and Emile H. L. Aarts and Jan Karel Lenstra},
+  title          = {Job Shop Scheduling by Simulated Annealing},
+  publisher      = {INFORMS},
+  year           = {1992},
+  DOI            = {10.1287/opre.40.1.113},
+}
+
+@book{pezzella,
+  author         = {Ferdinando Pezzella and Emanuela Merelli},
+  title          = {A tabu search method guided by shifting bottleneck for the job shop scheduling problem},
+  publisher      = {Elsevier B.V.},
+  year           = {2000},
+  address        = {Istituto di Informatica, Università degli Studi di Ancona, via Brecce Bianche, 60131 Ancona (Italy)},
+  DOI            = {10.1016/S0377-2217(99)00158-7}
+}
+
+@book{adams,
+  author         = {J. Adams and E. Balas and D. Zawack},
+  title          = {The shifting bottleneck procedure for job shop scheduling, Management Science 34},
+  publisher      = {INFORMS},
+  year           = {1988},
+  pages          = {391-401},
+  address        = {Graduate School of Industrial Administration, Carnegie-Mellon University, Pittsburgh, Pennsylvania 15213 American Airlines},
+  DOI            = {10.1287/mnsc.34.3.391},
 }
