added more sections to the assignment paper in amh

--- a/electives/amh/wyk/referat/bib.bib
+++ b/electives/amh/wyk/referat/bib.bib
@@ -99,3 +99,18 @@
   volume = {42},
   year = {1996}
 }
+
+@article{carlier,
+  title = "The one-machine sequencing problem",
+  journal = "European Journal of Operational Research",
+  volume = "11",
+  number = "1",
+  pages = "42 - 47",
+  year = "1982",
+  note = "Third EURO IV Special Issue",
+  issn = "0377-2217",
+  doi = "https://doi.org/10.1016/S0377-2217(82)80007-6",
+  url = "http://www.sciencedirect.com/science/article/pii/S0377221782800076",
+  author = "Jacques Carlier",
+  abstract = "Let M1 and M3 be non-bottleneck machines and M2 a bottleneck machine processing only one job at a time. Suppose that n jobs have to be processed on M1, M2 and M1 (in that order) and job i has to spend a time a, on M1, d1 on M2 and q1 on M3: we want to minimize the makespan. This problem is important since its resolution provides a bound on the makespan of complicated systems such as job shops. It is NP-hard in the strong sense. However, efficient branch and bound methods exist and we describe one of them. Our bound for the tree-search is very close to the bound used by Florian et al., but the principle of branching is quite different. At every node, we construct by an O(n log n) algorithm a Schrage schedule; then we define a critical job c, a critical set J and consider two subsets of schedules; the schedules when c procedes every job of J and the schedules when c follows every job of J. We give the results of this method and prove that the difference between the optimum and the Schrage schedule is less than d1."
+}
