--- a/electives/amh/wyk/referat/tabu-search-job-shop-scheduling.tex
+++ b/electives/amh/wyk/referat/tabu-search-job-shop-scheduling.tex
@@ -119,9 +119,13 @@ To generate a move we choose a tuple of vertices $v$ and $w$, such that:
 \end{enumerate}
 and alter the order in which the $k$-th machine processes operations $v$ and $w$ through swapping both of these operations.
 
+\subsection{Tabu list}
+
+Because we are using a very simple definition of the neighbourhood function, for the Tabu list we also need a very basic approach. We treat the Tabu list as a FIFO (first in, first out queue) which holds all the swaps that are forbidden to avoid unnecessary evaluation of similar solutions as to explore more neighbourhoods. In section \ref{other-algs} we will determine how many items should our Tabu list hold (how old an entry has to be to be forgotten).
+
 \subsection{Example}
 
-Let us see an example of a small job shop problem and apply TabuSearch to it.
+Let us see an example of a small job shop problem and apply our approach to it.
 
 \begin{figure}[H]
   \centering
@@ -137,7 +141,7 @@ Let us generate an initial solution:
   \centering
   \def\svgwidth{0.5\columnwidth}
   \input{img/example-ts-solution-2.pdf_tex}
-  \caption{Example job shop scheduling problem with initial solution applied}
+  \caption{Example job shop scheduling problem with an initial solution applied}
   \label{ts-sol-2}
 \end{figure}
 
@@ -154,12 +158,32 @@ The blue line in figure \ref{ts-sol-2} represents the longest path in this DAG.
 After reversing one edge as presented above in Figure \ref{ts-sol-3} the cost of the longest path is higher than the initial solution generated at the beginning.
 Having performed a few iterations we find out that the first (initial) solution really was the best.
 
-\section{Other algorithms used in literature}
+\section{Other algorithms used in literature}\label{other-algs}
 
-We will compare the results of algorithms presented in papers by \citet{amico-trubian} and by \citet{pezzella}.
+We will compare the results of algorithms presented in articles by \citet{amico-trubian} and by \citet{pezzella}.
 
-Of course, both of these approaches are entirely different. \citet{amico-trubian} have used their own List Scheduling method called \texttt{bidir} which creates two half-schedules that are generated starting from the beginning and from the end using the chosen priority rule.
-\citet{pezzella} have also used a known method (proposed by \citet{adams}) for creating initial solutions called \textit{Shifting bottleneck} which
+Choosing an initial solution has a great impact on the final result as mentioned by \citet{pezzella} and previously observed by \Citet*{amico-trubian,nowicki}.
+
+\citet{amico-trubian} have used their own List Scheduling method called \textit{Bidir} which creates two half-schedules that are generated starting from the beginning and from the end using the chosen priority rule.
+\citet{pezzella} have used a known method (proposed by \citet{adams}) for creating initial solutions called \textit{shifting bottleneck} which optimizes the schedule for the machine that has the most effect on the total makespan. It solves one-machine sequencing problem for said machine.
+
+While \citet{amico-trubian} have used a more traditional version of TabuSearch, \citet{pezzella} used a procedure by \citet{carlier} for local reoptimization for the newly found better solution (based on the \textit{shifting bottleneck} algorithm).
+
+\citet{amico-trubian} have incorporated a restarting behaviour if no improvement was achieved after $\Delta$ iterations. Also because of empirical evidence they have discovered that introducing randomization in some aspects of the algorithm yields better computational results. For example, after $\Lambda$ iterations the minimum and the maximum length of the Tabu list is randomly selected from a given range that is specified right before running the algorithm.
+
+The algorithm by \citet{pezzella} alters the length of the Tabu list as well. It divides the maximum number of iterations into five parts. Three (odd numbered) parts keep the Tabu list length constant and during the parts numbered $2$ and $4$ transitions between different lengths occur.
+
+Both approaches terminate after a certain threshold of maximum iterations (defined in both articles as \textit{Maxiter}).
+
+\subsection{Computational results}
+
+First, let us compare the results for problems classified as \textit{class a)} in \cite{pezzella} (contained in table 3 in \cite{amico-trubian}). The computational results got from the approach by \citet{pezzella} are in most cases better or the same as \citet{amico-trubian}, apart from very few cases.
+
+However, results for problems from \textit{class b)} (table 4 in \cite{amico-trubian}) are in almost all cases better when computed using the algorithm by \citet{pezzella} than the algorithm by \citet{amico-trubian}. For example, in problem LA29 both algorithms struggle to find the optimum, but algorithm by \citet{pezzella} yields results that are at least closer to the optimum (lower error percentage).
+
+\subsubsection{Some remarks on the computational results}
+
+Unfortunately \citet{pezzella} have not included results of running their heuristic approach on generating the initial solutions alone (without the TabuSearch) so we cannot compare the results of the initial solutions generated by two approaches in the discussed papers. We can only speculate on how did these procedures for generating initial solutions have an effect on the computational results. The TSSB algorithm presented by \citet{pezzella} does include a reoptimization technique that runs after the TabuSearch finds a better solution – it may have had some impact on how quickly the algorithm converged to solutions near the optimum.
 
 
 \bibliography{bib.bib}
